--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
 hello this is my website
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>cricketers</h1>
+    <p>mahendra singh dhoni,virat kholi,ravindra jadaja,yusuf,yuvraj</p>
+    
+</body>
+</html>
